WW-5021 Adds missing validation for trailing "/"

--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -83,10 +83,14 @@ struts.multipart.maxSize=2097152
 ### prior to a comma e.g. struts.action.extension=, or struts.action.extension=x,y,z,,
 struts.action.extension=action,,
 
-### Used by FilterDispatcher
+### Used by Dispatcher
 ### If true then Struts serves static content from inside its jar.
-### If false then the static content must be available at <context_path>/struts
+### If false then the static content must be available at <context_path>/static
 struts.serve.static=true
+
+### A path from which a static content is served, it must start with "/"
+### and it cannot end with "/"
+struts.ui.staticContentPath=/static
 
 ### Used by FilterDispatcher
 ### This is good for development where one wants changes to the static content be
@@ -146,9 +150,6 @@ struts.ui.templateDir=template
 struts.ui.theme.expansion.token=~~~
 #sets the default template type. Either ftl, vm, or jsp
 struts.ui.templateSuffix=ftl
-
-### A path from which a static content is served in case of tags
-struts.ui.staticContentPath=/static
 
 ### Configuration reloading
 ### This will cause the configuration to reload struts.xml when it is changed
