--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
         <!-- Sonar -->
         <!-- <sonar.host.url>https://builds.apache.org/analysis/</sonar.host.url>
         <sonar.exclusions>apps/**</sonar.exclusions> -->
-        <sonar.projectKey>kerttup-struts</sonar.projectKey>
+        <sonar.projectKey>kerttup_struts</sonar.projectKey>
         <sonar.organization>kerttup</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
