--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,8 @@
         <fluido-skin.version>1.9</fluido-skin.version>
 
         <!-- Sonar -->
-        <!-- <sonar.host.url>https://builds.apache.org/analysis/</sonar.host.url>
-        <sonar.exclusions>apps/**</sonar.exclusions> -->
-        <sonar.projectKey>kerttup-struts</sonar.projectKey>
-        <sonar.organization>kerttup</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.host.url>https://builds.apache.org/analysis/</sonar.host.url>
+        <sonar.exclusions>apps/**</sonar.exclusions>
     </properties>
 
     <profiles>
