--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.5.27</version>
+        <version>2.5.28-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-plugins</artifactId>
