WW-4992 Adds a note since which version this plugin is deprecated

--- a/plugins/embeddedjsp/pom.xml
+++ b/plugins/embeddedjsp/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-embeddedjsp-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>DEPRECATED: Struts 2 Embedded JSP Plugin</name>
+    <name>DEPRECATED: Struts 2 Embedded JSP Plugin (since 2.6)</name>
 
     <dependencies>
         <dependency>
