--- a/plugins/oval/pom.xml
+++ b/plugins/oval/pom.xml
@@ -29,8 +29,8 @@
 
     <artifactId>struts2-oval-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 OVal Plugin</name>
-    
+    <name>DEPRECATED: Struts 2 OVal Plugin (since 2.6)</name>
+
     <dependencies>
         <!-- OVal -->
         <dependency>
