--- a/plugins/portlet-mocks/pom.xml
+++ b/plugins/portlet-mocks/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-portlet-mocks-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 Portlet Mocks Plugin</name>
+    <name>DEPRECATED: Struts 2 Portlet Mocks Plugin - since 2.6</name>
 
     <dependencies>
         <dependency>
