--- a/plugins/portlet-tiles/pom.xml
+++ b/plugins/portlet-tiles/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-portlet-tiles-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 Portlet Tiles Plugin</name>
+    <name>DEPRECATED: Struts 2 Portlet Tiles Plugin - since 2.6</name>
 
     <dependencies>
         <dependency>
