--- a/plugins/gxp/pom.xml
+++ b/plugins/gxp/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-gxp-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 GXP Plugin</name>
+    <name>DEPRECATED: Struts 2 GXP Plugin - since 2.6</name>
 
     <dependencies>
         <dependency>
