--- a/plugins/osgi/pom.xml
+++ b/plugins/osgi/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-osgi-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 OSGi Plugin</name>
+    <name>DEPRECATED: Struts 2 OSGi Plugin - since 2.6</name>
 
     <dependencies>
         <!-- Define OSGi Core and Compendium dependencies directly here for the plugin.
