--- a/plugins/plexus/pom.xml
+++ b/plugins/plexus/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-plexus-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 Plexus Plugin</name>
+    <name>DEPRECATED: Struts 2 Plexus Plugin - since 2.6</name>
 
     <dependencies>
         <dependency>
