--- a/plugins/sitemesh/pom.xml
+++ b/plugins/sitemesh/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-sitemesh-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 Sitemesh Plugin</name>
+    <name>DEPRECATED: Struts 2 Sitemesh Plugin - since 2.6</name>
 
     <dependencies>
         <dependency>
