--- a/plugins/testng/pom.xml
+++ b/plugins/testng/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.29-SNAPSHOT</version>
+        <version>2.5.28.1</version>
     </parent>
 
     <artifactId>struts2-testng-plugin</artifactId>
