--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -29,7 +29,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.6-SNAPSHOT</version>
+    <version>6.0.0-RC1</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -44,7 +44,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.6-SNAPSHOT</struts-version.version>
+        <struts-version.version>6.0.0-RC1</struts-version.version>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
@@ -173,4 +173,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+  <scm>
+    <tag>STRUTS_6_0_0_RC1</tag>
+  </scm>
 </project>
