--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
 
         <!-- Sonar -->
         <sonar.projectKey>apache_struts</sonar.projectKey>
+        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
         <sonar.organization>apache</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.exclusions>apps/**</sonar.exclusions>
