--- a/plugins/dwr/pom.xml
+++ b/plugins/dwr/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.28.2</version>
+        <version>2.5.29-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-dwr-plugin</artifactId>
