--- a/plugins/jfreechart/pom.xml
+++ b/plugins/jfreechart/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.5.29-SNAPSHOT</version>
+        <version>2.5.29</version>
    </parent>
 
     <artifactId>struts2-jfreechart-plugin</artifactId>
