--- a/plugins/sitemesh/pom.xml
+++ b/plugins/sitemesh/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>6.0.0-RC2</version>
     </parent>
 
     <artifactId>struts2-sitemesh-plugin</artifactId>
