--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,8 @@
         <tiles.version>3.0.8</tiles.version>
         <tiles-request.version>1.0.7</tiles-request.version>
         <log4j2.version>2.12.4</log4j2.version>
-        <jackson.version>2.10.3</jackson.version>
+        <jackson.version>2.10.5</jackson.version>
+        <jackson-databind.version>2.10.5.1</jackson-databind.version>
 
         <!-- Site generation -->
         <fluido-skin.version>1.8</fluido-skin.version>
@@ -1082,7 +1083,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
