WW-5016 Improves description of different patterns

--- a/core/src/main/resources/org/apache/struts2/default.properties
+++ b/core/src/main/resources/org/apache/struts2/default.properties
@@ -246,7 +246,7 @@ struts.handle.exception=true
 ### Defines which named instance of DateFormatter to use, there are two instances:
 ### - simpleDateFormatter (based on SimpleDateFormat)
 ### - dateTimeFormatter (based on Java 8 Date/Time API)
-### These formatters are using a slightly different patterns, please check JavaDocs for from details and WW-5016
+### These formatters are using a slightly different patterns, please check JavaDocs of both and more details is in WW-5016
 struts.date.formatter=dateTimeFormatter
 
 ### END SNIPPET: complete_file
