--- a/plugins/osgi/pom.xml
+++ b/plugins/osgi/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.0.0-SNAPSHOT</version>
+        <version>6.0.0-RC3</version>
     </parent>
 
     <artifactId>struts2-osgi-plugin</artifactId>
