--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>struts2-parent</artifactId>
-    <version>2.5.30</version>
+    <version>2.5.31-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Struts 2</name>
     <url>http://struts.apache.org/</url>
@@ -51,7 +51,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</developerConnection>
         <url>https://github.com/apache/struts/</url>
-        <tag>STRUTS_2_5_30</tag>
+        <tag>STRUTS_2_5_27</tag>
     </scm>
 
     <issueManagement>
@@ -96,7 +96,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2022-03-15T13:49:51Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-03-15T13:53:45Z</project.build.outputTimestamp>
 
         <!-- Dependencies -->
         <ognl.version>3.1.29</ognl.version>
