Adjusts Travis build to be aligned with Jenkins pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,9 @@ matrix:
 
 script:
    - if [ "$STRUTS_IT" == "true" ]; then
-      ./mvnw clean verify org.jacoco:jacoco-maven-plugin:report org.jacoco:jacoco-maven-plugin:report-integration org.eluder.coveralls:coveralls-maven-plugin:report -Ptravis-coveralls -DskipAssembly -B;
+      ./mvnw clean package verify org.jacoco:jacoco-maven-plugin:report org.jacoco:jacoco-maven-plugin:report-integration org.eluder.coveralls:coveralls-maven-plugin:report -Ptravis-coveralls -DskipAssembly -B;
     else
-      if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then
-        ./mvnw test -DskipAssembly -B;
-      else
-        ./mvnw test -DskipAssembly -Dupdate-impact -B;
-      fi;
+      ./mvnw test -DskipAssembly -B;
     fi;
 
 cache:
