WW-5182 Upgrade to Servlet API 3.1

--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -53,11 +53,9 @@
 
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
+            <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
 
     </dependencies>
 
