WW-5190 Disables test which won't pass without refactoring the prepare and execute filters

--- a/apps/showcase/src/main/webapp/WEB-INF/web.xml
+++ b/apps/showcase/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,7 @@
     <filter>
         <filter-name>struts-prepare</filter-name>
         <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareFilter</filter-class>
+        <async-supported>true</async-supported>
     </filter>
 
     <filter>
