WW-5193 Uses proper org.hibernate.validator groupId and upgrade to version 6.1.3.Final

--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -150,9 +150,9 @@
 
         <!-- BeanValidation Example -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.1.2.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
 
     </dependencies>
