WW-5219 Moves TestNG related classes into TestNG plugin Also moves test classes under testng package

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -339,8 +339,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <scope>compile</scope>
-            <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
         <!-- SLF4J support -->
