Puts back JaCoCo report generation

--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,18 @@
                                     <goal>prepare-agent-integration</goal>
                                 </goals>
                             </execution>
+                            <execution>
+                                <id>report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                    <goal>report-integration</goal>
+                                </goals>
+                                <configuration>
+                                    <formats>
+                                        <format>XML</format>
+                                    </formats>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
